helm/ISTIO/public_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: public-simple
spec:
  hosts:
  - public.mymco.local
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: /_command/status
    route:
    - destination:
        host: simple2
        port:
          number: 8001
  - match:
    - uri:
        prefix: /_command
    route:
    - destination:
        host: simple
        port:
          number: 8000
